--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [workspace]
 members = [
-  "packable",
-  "packable-derive",
+  "packable/packable",
+  "packable/packable-derive",
 ]
 
+# The resolver is a global setting for a workspace, and the setting is ignored
+# in dependencies. The setting is only honored for the top-level package of the
+# workspace. Given that we are using a workspace, we need to explicitly set the
+# resolver field if we want to opt-in to the new resolver.
 resolver = "2"
