--- a/packable/packable-derive/Cargo.toml
+++ b/packable/packable-derive/Cargo.toml
@@ -28,7 +28,7 @@ quote = { version = "1.0.10", default-features = false }
 syn = { version = "1.0.80", default-features = false, features = [ "full", "extra-traits", "parsing", "printing", "derive", "proc-macro", "clone-impls" ] }
 
 [dev-dependencies]
-packable = { path = "../packable", default-features = false }
+packable = { version = "0.1", default-features = false }
 
 rustversion = { version = "1.0.5", default-features = false }
 trybuild = { version = "1.0.50", default-features = false, features = [ "diff" ] }
