--- a/packable/packable/Cargo.toml
+++ b/packable/packable/Cargo.toml
@@ -3,7 +3,7 @@ name = "packable"
 version = "0.1.0"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
-description = "Serialization and deserialization primitives for the bee framework."
+description = "Serialization and deserialization primitives for the IOTA ecosystem."
 readme = "README.md"
 repository = "https://github.com/iotaledger/common-rs"
 license = "Apache-2.0"
@@ -17,7 +17,7 @@ io = [ ]
 autocfg = { version = "1.0.1", default-features = false }
 
 [dependencies]
-packable-derive = { path = "../packable-derive", default-features = false }
+packable-derive = { version = "=0.1", default-features = false }
 
 primitive-types = { version = "0.10.1", default-features = false, optional = true }
 serde = { version = "1.0.130", default-features = false, features = [ "derive", "std" ], optional = true }
