--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
   "packable/packable",
   "packable/packable-derive",
+  "packable/packable-derive-test",
 ]
 
 # The resolver is a global setting for a workspace, and the setting is ignored
