--- a/packable/packable-derive/Cargo.toml
+++ b/packable/packable-derive/Cargo.toml
@@ -3,7 +3,7 @@ name = "packable-derive"
 version = "0.1.0"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
-description = "Derive macros for the packable crate."
+description = "Derive macro for the packable crate."
 readme = "README.md"
 repository = "https://github.com/iotaledger/common-rs"
 license = "Apache-2.0"
@@ -13,16 +13,9 @@ homepage = "https://www.iota.org"
 [lib]
 proc-macro = true
 
-[[test]]
-name = "tests"
-path = "tests/lib.rs"
-
 [dependencies]
 proc-macro-crate = { version = "1.1.0", default-features = false }
 proc-macro-error = { version = "1.0.4", default-features = false, features = [ "syn-error" ] }
 proc-macro2 = { version = "1.0.30", default-features = false }
 quote = { version = "1.0.10", default-features = false }
 syn = { version = "1.0.80", default-features = false, features = [ "full", "extra-traits", "parsing", "printing", "derive", "proc-macro", "clone-impls" ] }
-
-rustversion = { version = "1.0.5", default-features = false }
-trybuild = { version = "1.0.50", default-features = false, features = [ "diff" ] }
