--- a/packable/packable-derive/Cargo.toml
+++ b/packable/packable-derive/Cargo.toml
@@ -3,7 +3,7 @@ name = "packable-derive"
 version = "0.1.0"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
-description = "Derive macro for the packable crate."
+description = "Derive macro for the `packable` crate."
 readme = "README.md"
 repository = "https://github.com/iotaledger/common-rs"
 license = "Apache-2.0"
