--- a/packable/packable/Cargo.toml
+++ b/packable/packable/Cargo.toml
@@ -3,7 +3,7 @@ name = "packable"
 version = "0.1.0"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
-description = "Serialization and deserialization primitives for the IOTA ecosystem."
+description = "A crate for packing and unpacking binary representations."
 readme = "README.md"
 repository = "https://github.com/iotaledger/common-rs"
 license = "Apache-2.0"
