exclude `packable-derive-test` from the `missing-files` workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -265,4 +265,4 @@ jobs:
 
       - name: Run missing files check
         run: >
-          bash .github/workflows/scripts/missing_files.sh 
+          bash .github/workflows/scripts/missing_files.sh packable/packable-derive-test
