--- a/.github/workflows/about.toml
+++ b/.github/workflows/about.toml
@@ -4,6 +4,7 @@ accepted = [
     "Apache-2.0",
     "BSD-3-Clause",
     "MIT",
+    "MPL-2.0",
 ]
 
 # For now, we include these so that the number of gathered crates matches the number of crates in `Cargo.lock`.
