Rename sorted crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [workspace]
 members = [
+  "iterator-sorted",
   "packable/packable",
   "packable/packable-derive",
   "packable/packable-derive-test",
-  "stable-sorted",
 ]
 
 # The resolver is a global setting for a workspace, and the setting is ignored
