--- a/iterator-sorted/Cargo.toml
+++ b/iterator-sorted/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "stable-sorted"
+name = "iterator-sorted"
 version = "0.1.0"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
@@ -7,5 +7,5 @@ description = "Stable functions for checking iterator sorting."
 readme = "README.md"
 repository = "https://github.com/iotaledger/common-rs"
 license = "Apache-2.0"
-keywords = [ "iota", "iterator", "sorted", "stable" ]
+keywords = [ "iota", "iterator", "sorted" ]
 homepage = "https://www.iota.org"
