Add logging and time crates (#5)
* Add logging and time crates

* Correct copyright date

* Fmt

* Rename logger crate

* Add MPL-2.0 to accepted licenses

* Rename time crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [workspace]
 members = [
+  "fern-logger",
   "iterator-sorted",
   "packable/packable",
   "packable/packable-derive",
   "packable/packable-derive-test",
+  "time-helper",
 ]
 
 # The resolver is a global setting for a workspace, and the setting is ignored
