--- a/.github/workflows/about.toml
+++ b/.github/workflows/about.toml
@@ -2,9 +2,18 @@
 
 accepted = [
     "Apache-2.0",
+    "BSD-2-Clause",
     "BSD-3-Clause",
+    "CC0-1.0",
+    "ISC",
     "MIT",
     "MPL-2.0",
+    "OpenSSL",
+]
+
+workarounds = [
+    # Non-standard license file, actually is ISC AND OpenSSL AND MIT.
+    "ring",
 ]
 
 # For now, we include these so that the number of gathered crates matches the number of crates in `Cargo.lock`.
