--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -28,6 +28,7 @@ jobs:
           profile: minimal
           toolchain: nightly
           override: true
+      - run: cp -r .github/workflows/.cargo .cargo
       - uses: actions-rs/audit-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
