--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ members = [
   "packable/packable-derive",
   "packable/packable-derive-test",
   "time-helper",
+  "trace-tools/trace-tools",
+  "trace-tools/trace-tools-attributes",
 ]
 
 # The resolver is a global setting for a workspace, and the setting is ignored
