--- a/auth-helper/Cargo.toml
+++ b/auth-helper/Cargo.toml
@@ -15,3 +15,4 @@ jsonwebtoken = { version = "7.2.0", default-features = false }
 rand = { version = "0.8.4", default-features = false, features = [ "std" ] }
 rust-argon2 = { version = "0.8.3", default-features = false }
 serde = { version = "1.0.30", default-features = false, features = [ "std", "derive" ] }
+thiserror = { version = "1.0.30", default-features = false }
