--- a/trace-tools/trace-tools-attributes/Cargo.toml
+++ b/trace-tools/trace-tools-attributes/Cargo.toml
@@ -11,6 +11,7 @@ keywords = [ "iota", "tangle", "task", "trace" ]
 homepage = "https://www.iota.org"
 
 [lib]
+path = "src/lib.rs"
 proc-macro = true
 
 [dependencies]
@@ -19,7 +20,7 @@ quote = { version = "1.0.9", default-features = false }
 syn = { version = "1.0.75", default-features = false, features = [ "full", "extra-traits", "parsing", "printing", "derive", "proc-macro", "clone-impls" ] }
 
 [dev-dependencies]
-trace-tools = { path = "../trace-tools", default-features = false }
+trace-tools = { version = "0.1.0", path = "../trace-tools", default-features = false }
 
 [package.metadata.cargo-udeps.ignore]
 development = [ "trace-tools" ]
