--- a/trace-tools/trace-tools/Cargo.toml
+++ b/trace-tools/trace-tools/Cargo.toml
@@ -13,7 +13,7 @@ homepage = "https://www.iota.org"
 [dependencies]
 fern-logger = { version = "0.1.0", path = "../../fern-logger", default-features = false }
 time-helper = { version = "0.1.0", path = "../../time-helper", default-features = false }
-trace-tools-attributes = { path = "../trace-tools-attributes", default-features = false }
+trace-tools-attributes = { version = "0.1.0", path = "../trace-tools-attributes", default-features = false }
 
 colored = { version = "2.0.0", default-features = false }
 inferno = { version = "0.10.6", default-features = false }
