--- a/packable/packable/Cargo.toml
+++ b/packable/packable/Cargo.toml
@@ -12,7 +12,7 @@ homepage = "https://www.iota.org"
 
 [features]
 io = [ "std" ]
-std = [ "thiserror" ]
+std = [ ]
 
 [build-dependencies]
 autocfg = { version = "1.0.1", default-features = false }
@@ -22,4 +22,3 @@ packable-derive = { version = "=0.1.0", path = "../packable-derive", default-fea
 
 primitive-types = { version = "0.10.1", default-features = false, optional = true }
 serde = { version = "1.0.130", default-features = false, features = [ "derive", "std" ], optional = true }
-thiserror = { version = "1.0.0", default-features = false, optional = true }
