derive `Error` under the `std` feature for `packable` error types (#15)
* derive `Error` under the `std` feature

* update changelog

* fix docs

* Update packable/packable/CHANGELOG.md

* remove `thiserror`

Co-authored-by: Thibault Martinez <thibault.martinez.30@gmail.com>

--- a/packable/packable/Cargo.toml
+++ b/packable/packable/Cargo.toml
@@ -11,7 +11,8 @@ keywords = [ "iota", "serialization", "framework", "packable" ]
 homepage = "https://www.iota.org"
 
 [features]
-io = [ ]
+io = [ "std" ]
+std = [ ]
 
 [build-dependencies]
 autocfg = { version = "1.0.1", default-features = false }
