implement `Packable` for `usize`, `isize`, `Vec<T>`, `Box<[T]>` and `String` (#17)
* implement `Packable` for `usize`, `isize`, `Vec<T>`, `Box<[T]>` and `String`

* rename feature

* update changelog

* merge

* split tests

--- a/packable/packable/Cargo.toml
+++ b/packable/packable/Cargo.toml
@@ -13,6 +13,7 @@ homepage = "https://www.iota.org"
 [features]
 io = [ "std" ]
 std = [ ]
+usize = [ ]
 
 [build-dependencies]
 autocfg = { version = "1.0.1", default-features = false }
