--- a/packable/packable/Cargo.toml
+++ b/packable/packable/Cargo.toml
@@ -7,7 +7,7 @@ description = "A crate for packing and unpacking binary representations."
 readme = "README.md"
 repository = "https://github.com/iotaledger/common-rs"
 license = "Apache-2.0"
-keywords = [ "iota", "serialization", "framework", "packable" ]
+keywords = [ "binary", "no_std", "serialization", "packable" ]
 homepage = "https://www.iota.org"
 
 [features]
