--- a/packable/packable-derive-test/Cargo.toml
+++ b/packable/packable-derive-test/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 repository = "https://github.com/iotaledger/common-rs"
 license = "Apache-2.0"
 publish = false
-keywords = [ "iota", "serialization", "framework", "packable" ]
+keywords = [ "binary", "no_std", "serialization", "packable" ]
 homepage = "https://www.iota.org"
 
 [[test]]
