--- a/packable/packable-derive-test/Cargo.toml
+++ b/packable/packable-derive-test/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "packable-derive-test"
-version = "0.2.0"
+version = "0.2.1"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
 description = "Test suite for the `packable-derive` crate."
@@ -8,7 +8,7 @@ readme = "README.md"
 repository = "https://github.com/iotaledger/common-rs"
 license = "Apache-2.0"
 publish = false
-keywords = [ "iota", "serialization", "framework", "packable" ]
+keywords = [ "binary", "no_std", "serialization", "packable" ]
 homepage = "https://www.iota.org"
 
 [[test]]
@@ -16,7 +16,7 @@ name = "tests"
 path = "tests/lib.rs"
 
 [dev-dependencies]
-packable = { version = "=0.2.0", path = "../packable", default-features = false }
+packable = { version = "=0.2.1", path = "../packable", default-features = false }
 
 rustversion = { version = "1.0.5", default-features = false }
 trybuild = { version = "1.0.50", default-features = false, features = [ "diff" ] }
