--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,12 @@ jobs:
         with:
           command: test
           args: --workspace --all-targets --all-features --release
+      
+      - name: Doc Test
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --workspace --doc --all-features --release
 
   miri:
     needs: build-and-test
