:tada: Initial commit

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,6 +158,7 @@ jobs:
         rust: [nightly, beta, stable]
         crates: [
           "iterator-sorted",
+          "prefix-hex",
         ]
 
     steps:
