:page_facing_up: Switch to `paste` because of license

--- a/prefix-hex/Cargo.toml
+++ b/prefix-hex/Cargo.toml
@@ -16,7 +16,7 @@ primitive-types = { version = "0.10.1", default-features = false, optional = tru
 uint = { version = "0.9.3", default-features = false, optional = true }
 
 [dev-dependencies]
-mini_paste = { version = "0.1.11", default-features = false }
+paste = { version = "1.0.6", default-features = false }
 
 [features]
 primitive-types1 = [ "primitive-types", "uint" ]
