:pray: Address review comments

--- a/prefix-hex/Cargo.toml
+++ b/prefix-hex/Cargo.toml
@@ -3,7 +3,7 @@ name = "prefix-hex"
 version = "0.1.0"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
-description = "Encoding and decoding of hex strings with 0x prefix"
+description = "Encoding and decoding of hex strings with 0x prefix."
 readme = "README.md"
 repository = "https://github.com/iotaledger/common-rs"
 license = "Apache-2.0"
