--- a/prefix-hex/Cargo.toml
+++ b/prefix-hex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "prefix-hex"
-version = "0.3.0"
+version = "0.4.0"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
 description = "Encoding and decoding of hex strings with 0x prefix."
@@ -12,11 +12,12 @@ homepage = "https://www.iota.org"
 
 [dependencies]
 hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
-primitive-types = { version = "0.10.1", default-features = false, optional = true }
+primitive-types = { version = "0.11.1", default-features = false, optional = true }
 uint = { version = "0.9.3", default-features = false, optional = true }
 
 [dev-dependencies]
 paste = { version = "1.0.6", default-features = false }
 
 [features]
-primitive-types1 = [ "primitive-types", "uint" ]
+primitive-types = [ "dep:primitive-types", "uint" ]
+std = [ ]
