--- a/packable/packable/Cargo.toml
+++ b/packable/packable/Cargo.toml
@@ -12,7 +12,7 @@ homepage = "https://www.iota.org"
 
 [features]
 io = [ "std" ]
-std = [ ]
+std = [ "serde?/std", "primitive-types?/std" ]
 usize = [ ]
 
 [build-dependencies]
@@ -22,4 +22,4 @@ autocfg = { version = "1.1.0", default-features = false }
 packable-derive = { version = "=0.7.0", path = "../packable-derive", default-features = false }
 
 primitive-types = { version = "0.12.0", default-features = false, optional = true }
-serde = { version = "1.0.145", default-features = false, features = [ "derive", "std" ], optional = true }
+serde = { version = "1.0.145", default-features = false, features = [ "derive" ], optional = true }
