--- a/packable/packable/Cargo.toml
+++ b/packable/packable/Cargo.toml
@@ -12,6 +12,7 @@ homepage = "https://www.iota.org"
 
 [features]
 io = ["std"]
+serde = ["dep:serde", "hashbrown/serde"]
 std = ["serde?/std", "primitive-types?/std"]
 usize = []
 
@@ -21,6 +22,10 @@ autocfg = { version = "1.1.0", default-features = false }
 [dependencies]
 packable-derive = { version = "=0.9.0", path = "../packable-derive", default-features = false }
 
+hashbrown = { version = "0.14.3", default-features = false, features = [
+    "ahash",
+    "inline-more",
+] }
 primitive-types = { version = "0.12.2", default-features = false, optional = true }
 serde = { version = "1.0.195", default-features = false, features = [
     "derive",
