--- a/packable/packable/Cargo.toml
+++ b/packable/packable/Cargo.toml
@@ -29,4 +29,5 @@ hashbrown = { version = "0.14.3", default-features = false, features = [
 primitive-types = { version = "0.12.2", default-features = false, optional = true }
 serde = { version = "1.0.195", default-features = false, features = [
     "derive",
+    "alloc"
 ], optional = true }
