--- a/packable/packable/Cargo.toml
+++ b/packable/packable/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "packable"
-version = "0.10.1"
+version = "0.11.0"
 authors = ["IOTA Stiftung"]
 edition = "2021"
 description = "A crate for packing and unpacking binary representations."
@@ -20,7 +20,7 @@ usize = []
 autocfg = { version = "1.1.0", default-features = false }
 
 [dependencies]
-packable-derive = { version = "=0.9.0", path = "../packable-derive", default-features = false }
+packable-derive = { version = "=0.10.0", path = "../packable-derive", default-features = false }
 
 hashbrown = { version = "0.14.3", default-features = false, features = [
     "ahash",
@@ -29,4 +29,5 @@ hashbrown = { version = "0.14.3", default-features = false, features = [
 primitive-types = { version = "0.12.2", default-features = false, optional = true }
 serde = { version = "1.0.195", default-features = false, features = [
     "derive",
+    "alloc"
 ], optional = true }
